--- a/src/gui/VisibilityPicker.fxml
+++ b/src/gui/VisibilityPicker.fxml
@@ -1,33 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.shape.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.shape.SVGPath?>
 
-<fx:root alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="92.0" type="HBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="105.0" type="HBox" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <SVGPath fx:id="svgAdmin" content="M13.71 12Q13.71 10.58 12.71 9.58T10.29 8.57 7.86 9.58 6.86 12 7.86 14.42 10.29 15.43 12.71 14.42 13.71 12ZM20.57 10.54V13.51Q20.57 13.67 20.46 13.82T20.2 14L17.72 14.37Q17.46 15.09 17.2 15.59 17.67 16.26 18.63 17.44 18.76 17.6 18.76 17.77T18.64 18.08Q18.28 18.58 17.32 19.53T16.06 20.48Q15.9 20.48 15.71 20.36L13.86 18.91Q13.27 19.22 12.64 19.42 12.43 21.24 12.25 21.91 12.16 22.29 11.77 22.29H8.8Q8.61 22.29 8.47 22.17T8.32 21.88L7.94 19.42Q7.29 19.21 6.74 18.92L4.85 20.36Q4.71 20.48 4.51 20.48 4.33 20.48 4.18 20.33 2.49 18.8 1.97 18.08 1.88 17.95 1.88 17.77 1.88 17.61 1.98 17.46 2.18 17.18 2.67 16.57T3.39 15.63Q3.03 14.96 2.84 14.3L0.39 13.94Q0.21 13.92 0.11 13.77T0 13.46V10.49Q0 10.33 0.11 10.18T0.36 10L2.85 9.63Q3.04 9.01 3.38 8.4 2.84 7.63 1.94 6.55 1.81 6.39 1.81 6.23 1.81 6.09 1.93 5.92 2.28 5.44 3.25 4.48T4.51 3.52Q4.69 3.52 4.86 3.66L6.71 5.09Q7.3 4.78 7.93 4.58 8.14 2.76 8.32 2.09 8.41 1.71 8.8 1.71H11.77Q11.96 1.71 12.1 1.83T12.25 2.12L12.63 4.58Q13.29 4.79 13.83 5.08L15.74 3.64Q15.86 3.52 16.06 3.52 16.23 3.52 16.39 3.66 18.12 5.25 18.6 5.93 18.7 6.04 18.7 6.23 18.7 6.39 18.59 6.54 18.39 6.82 17.91 7.43T17.18 8.37Q17.53 9.04 17.73 9.68L20.18 10.06Q20.36 10.08 20.46 10.23T20.57 10.54Z" fill="#3cd728" onMouseClicked="#adminClicked" HBox.hgrow="ALWAYS">
+      <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="25.0" HBox.hgrow="ALWAYS">
          <HBox.margin>
             <Insets left="5.0" right="5.0" />
          </HBox.margin>
-      </SVGPath>
-      <SVGPath fx:id="svgDocent" content="M4 10V17H7V10H4ZM10 10V17H13V10H10ZM2 22H21V19H2V22ZM16 10V17H19V10H16ZM11.5 1L2 6V8H21V6L11.5 1Z" onMouseClicked="#docentCliked" strokeWidth="0.0" HBox.hgrow="ALWAYS">
+         <children>
+            <SVGPath fx:id="svgAdmin" content="M13.71 12Q13.71 10.58 12.71 9.58T10.29 8.57 7.86 9.58 6.86 12 7.86 14.42 10.29 15.43 12.71 14.42 13.71 12ZM20.57 10.54V13.51Q20.57 13.67 20.46 13.82T20.2 14L17.72 14.37Q17.46 15.09 17.2 15.59 17.67 16.26 18.63 17.44 18.76 17.6 18.76 17.77T18.64 18.08Q18.28 18.58 17.32 19.53T16.06 20.48Q15.9 20.48 15.71 20.36L13.86 18.91Q13.27 19.22 12.64 19.42 12.43 21.24 12.25 21.91 12.16 22.29 11.77 22.29H8.8Q8.61 22.29 8.47 22.17T8.32 21.88L7.94 19.42Q7.29 19.21 6.74 18.92L4.85 20.36Q4.71 20.48 4.51 20.48 4.33 20.48 4.18 20.33 2.49 18.8 1.97 18.08 1.88 17.95 1.88 17.77 1.88 17.61 1.98 17.46 2.18 17.18 2.67 16.57T3.39 15.63Q3.03 14.96 2.84 14.3L0.39 13.94Q0.21 13.92 0.11 13.77T0 13.46V10.49Q0 10.33 0.11 10.18T0.36 10L2.85 9.63Q3.04 9.01 3.38 8.4 2.84 7.63 1.94 6.55 1.81 6.39 1.81 6.23 1.81 6.09 1.93 5.92 2.28 5.44 3.25 4.48T4.51 3.52Q4.69 3.52 4.86 3.66L6.71 5.09Q7.3 4.78 7.93 4.58 8.14 2.76 8.32 2.09 8.41 1.71 8.8 1.71H11.77Q11.96 1.71 12.1 1.83T12.25 2.12L12.63 4.58Q13.29 4.79 13.83 5.08L15.74 3.64Q15.86 3.52 16.06 3.52 16.23 3.52 16.39 3.66 18.12 5.25 18.6 5.93 18.7 6.04 18.7 6.23 18.7 6.39 18.59 6.54 18.39 6.82 17.91 7.43T17.18 8.37Q17.53 9.04 17.73 9.68L20.18 10.06Q20.36 10.08 20.46 10.23T20.57 10.54Z" fill="#3cd728" />
+            <Rectangle fx:id="rectAdmin" arcHeight="5.0" arcWidth="5.0" fill="#1f93ff" height="25.0" opacity="0.0" stroke="BLACK" strokeType="INSIDE" width="25.0">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Rectangle>
+         </children>
+      </StackPane>
+      <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="25.0" HBox.hgrow="ALWAYS">
          <HBox.margin>
             <Insets left="5.0" right="5.0" />
          </HBox.margin>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </SVGPath>
-      <SVGPath fx:id="svgStudent" content="M5 13.18V17.18L12 21 19 17.18V13.18L12 17 5 13.18ZM12 3L1 9 12 15 21 10.09V17H23V9L12 3Z" onMouseClicked="#studentClicked" scaleX="1.1" scaleY="1.1" HBox.hgrow="ALWAYS">
+         <children>
+            <SVGPath fx:id="svgDocent" content="M4 10V17H7V10H4ZM10 10V17H13V10H10ZM2 22H21V19H2V22ZM16 10V17H19V10H16ZM11.5 1L2 6V8H21V6L11.5 1Z" strokeWidth="0.0">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </SVGPath>
+            <Rectangle fx:id="rectDocent" arcHeight="5.0" arcWidth="5.0" fill="#1f93ff" height="25.0" opacity="0.0" stroke="BLACK" strokeType="INSIDE" width="25.0">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Rectangle>
+         </children>
+      </StackPane>
+      <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="25.0" HBox.hgrow="ALWAYS">
          <HBox.margin>
-            <Insets left="5.0" top="1.0" />
+            <Insets left="5.0" />
          </HBox.margin>
-      </SVGPath>
+         <children>
+            <SVGPath fx:id="svgStudent" content="M5 13.18V17.18L12 21 19 17.18V13.18L12 17 5 13.18ZM12 3L1 9 12 15 21 10.09V17H23V9L12 3Z" scaleX="1.1" scaleY="1.1">
+               <StackPane.margin>
+                  <Insets />
+               </StackPane.margin>
+            </SVGPath>
+            <Rectangle fx:id="rectStudent" arcHeight="5.0" arcWidth="5.0" fill="#1f93ff" height="25.0" opacity="0.0" stroke="BLACK" strokeType="INSIDE" width="25.0">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Rectangle>
+         </children>
+      </StackPane>
    </children>
 </fx:root>
