--- a/src/gui/Material.fxml
+++ b/src/gui/Material.fxml
@@ -15,7 +15,7 @@
         <AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="224.0" prefWidth="615.0">
             <children>
                 <ImageView fx:id="ivPhoto" fitHeight="200.0" fitWidth="200.0" layoutX="142.0" layoutY="65.0" onMouseClicked="#selectImage" pickOnBounds="true" smooth="false" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
-                <TextArea fx:id="tfDescription" layoutX="214.0" layoutY="58.0" prefHeight="130.0" promptText="Omschrijving" AnchorPane.leftAnchor="224.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="49.0" />
+                <TextArea fx:id="tfDescription" wrapText="true" layoutX="214.0" layoutY="58.0" prefHeight="130.0" promptText="Omschrijving" AnchorPane.leftAnchor="224.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="49.0" />
                 <HBox layoutX="224.0" layoutY="14.0" prefHeight="25.0" prefWidth="200.0" AnchorPane.leftAnchor="224.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
                     <children>
                         <TextField fx:id="tfName" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Naam" HBox.hgrow="ALWAYS">
@@ -60,10 +60,10 @@
             <children>
                 <TableView fx:id="tvIdentifiers" layoutX="25.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="45.0">
                     <columns>
-                        <TableColumn fx:id="tcId" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" text="#" />
-                        <TableColumn fx:id="tcLocation" prefWidth="75.0" text="Plaats" />
-                        <TableColumn fx:id="tcAvailable" prefWidth="116.0" text="Beschikbaarheid" />
-                        <TableColumn fx:id="tcActions" prefWidth="75.0" text="Acties" />
+                        <TableColumn fx:id="tcId" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" text="#" style="-fx-alignment: center"/>
+                        <TableColumn fx:id="tcLocation" prefWidth="75.0" text="Plaats" style="-fx-alignment: center"/>
+                        <TableColumn fx:id="tcAvailable" prefWidth="116.0" text="Beschikbaarheid" style="-fx-alignment: center"/>
+                        <TableColumn fx:id="tcActions" prefWidth="75.0" text="Acties" style="-fx-alignment: center"/>
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -91,16 +91,16 @@
                 </HBox>
             </children>
         </AnchorPane>
-        <HBox alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="200.0">
+        <HBox alignment="CENTER" prefHeight="25.0" prefWidth="200.0">
             <children>
-                <Button fx:id="btnCancel" mnemonicParsing="false" onAction="#cancel" text="Cancel">
-                    <HBox.margin>
-                        <Insets bottom="14.0" right="5.0" />
-                    </HBox.margin>
-                </Button>
-                <Button fx:id="btnSave" mnemonicParsing="false" onAction="#saveMaterial" text="Toevoegen">
+                <Button fx:id="btnSave" mnemonicParsing="false" onAction="#saveMaterial" text="Save">
                     <HBox.margin>
                         <Insets bottom="14.0" left="5.0" right="14.0" />
+                    </HBox.margin>
+                </Button>
+                <Button fx:id="btnCancel" mnemonicParsing="false" onAction="#cancel" text="Discard">
+                    <HBox.margin>
+                        <Insets bottom="14.0" right="5.0" />
                     </HBox.margin>
                 </Button>
             </children>
