--- a/src/gui/IdentifierOptions.fxml
+++ b/src/gui/IdentifierOptions.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" type="HBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <StackPane>
+      <StackPane HBox.hgrow="NEVER">
          <children>
             <SVGPath content="M6.5,13h-1V6h1V13z M8.5,6h-1v7h1V6z M10.5,6h-1v7h1V6z M15.5,4c0,0.553-0.447,1-1,1h-1v10c0,0.553-0.447,1-1,1h-9c-0.553,0-1-0.447-1-1V5h-1c-0.553,0-1-0.447-1-1c0-0.552,0.447-1,1-1h2V1c0-0.552,0.447-1,1-1h7c0.553,0,1,0.448,1,1v2h2C15.053,3,15.5,3.448,15.5,4z M5.5,3h5V2h-5V3z M11.5,5h-7v9h7V5z" fill="#f53535" scaleX="1.3" scaleY="1.3" HBox.hgrow="NEVER" />
             <Rectangle fx:id="rectDelete" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="25.0" onMouseClicked="#delete" opacity="0.0" stroke="BLACK" strokeType="INSIDE" width="25.0">
@@ -20,4 +20,4 @@
          </children>
       </StackPane>
    </children>
-</HBox>
+</fx:root>
