--- a/src/gui/Overview.fxml
+++ b/src/gui/Overview.fxml
@@ -11,12 +11,12 @@
 
 <fx:root id="AnchorPane" prefHeight="400.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
-      <TableView fx:id="tvMaterials" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="500.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+      <TableView fx:id="tvMaterials" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="500.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" style="-fx-focus-color: transparent">
         <columns>
-          <TableColumn fx:id="tcName" prefWidth="75.0" text="Naam" />
-          <TableColumn fx:id="tcDescription" prefWidth="75.0" text="Beschrijving" />
-            <TableColumn fx:id="tcAmount" prefWidth="75.0" text="Aantal" />
-            <TableColumn fx:id="tcActions" prefWidth="75.0" text="Acties" />
+          <TableColumn fx:id="tcName" prefWidth="75.0" text="Naam" style="-fx-alignment: center"/>
+          <TableColumn fx:id="tcDescription" prefWidth="75.0" text="Beschrijving" style="-fx-alignment: center"/>
+            <TableColumn fx:id="tcAmount" prefWidth="75.0" text="Aantal" style="-fx-alignment: center"/>
+            <TableColumn fx:id="tcActions" prefWidth="75.0" text="Acties" style="-fx-alignment: center"/>
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
