--- a/src/gui/Reservation.fxml
+++ b/src/gui/Reservation.fxml
@@ -6,13 +6,20 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" >
+<fx:root id="AnchorPane" prefHeight="400.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="120.0" layoutY="76.0" text="UserEmail" />
-      <TextField fx:id="tcUserEmail" layoutX="217.0" layoutY="71.0" />
-      <Label layoutX="120.0" layoutY="109.0" text="OphaalDatum" />
-      <TextField fx:id="tcOphaalDatum" layoutX="217.0" layoutY="104.0" />
-      <TextField fx:id="tcTerugbrengDatum" layoutX="217.0" layoutY="143.0" />
-      <Button fx:id="btnSave" layoutX="145.0" layoutY="241.0" mnemonicParsing="false" onAction="#saveReservation" text="save" />
+      <Label layoutX="96.0" layoutY="76.0" text="UserEmail" />
+      <TextField fx:id="txfUserEmail" editable="false" layoutX="217.0" layoutY="71.0" />
+      <Label layoutX="96.0" layoutY="109.0" text="OphaalDatum" />
+      <Button fx:id="btnSave" layoutX="529.0" layoutY="343.0" mnemonicParsing="false" onAction="#saveReservation" text="save" />
+      <Label layoutX="96.0" layoutY="148.0" text="Terugbrengdatum" />
+      <TableView fx:id="tvMaterials" layoutX="46.0" layoutY="182.0" prefHeight="184.0" prefWidth="465.0">
+        <columns>
+          <TableColumn fx:id="tcMaterial" prefWidth="203.0" text="Materiaal" />
+          <TableColumn fx:id="tcPlace" prefWidth="75.0" text="Plaats" />
+        </columns>
+      </TableView>
+      <DatePicker fx:id="dpBringBackDate" layoutX="217.0" layoutY="143.0" />
+      <DatePicker fx:id="dpPickUpDate" layoutX="217.0" layoutY="104.0" />
    </children>
-</AnchorPane>
+</fx:root>
