voorlopig overview en toevoegen reservatie maar eerst moet die error opgelost zijn

--- a/src/gui/ReservationOverview.fxml
+++ b/src/gui/ReservationOverview.fxml
@@ -29,6 +29,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
+            <Button fx:id="btnRemove" mnemonicParsing="false" onMouseClicked="#removeReservation" text="Verwijder reservatie" />
          </children>
       </HBox>
    </children>
